# Student_Management_System

./: README.md
DataBase/: CMakeLists.txt  CourseBroker.cppm  DataBase.cppm  DataBroker.cppm  LICENSE  StudentBroker.cppm  TeacherBroker.cppm  TeachingTaskBroker.cppm  main.cpp
UiAndLogic/: CMakeLists.txt  coursecontroller.cppm  gradecontroller.cppm  main.cpp  maincontroller.cppm  secretarycontroller.cppm  studentcontroller.cppm  teachercontroller.cppm
doc/dataBase_layer/test_data/: test.md
doc/ui&applicationlogic_layer/: .~lock.表现层与应用逻辑层.odt#  表现层与应用逻辑层.odt
domain/: CMakeLists.txt  Course.cppm  Grade.cppm  Role.cppm  SecretaryRole.cppm  StudentRole.cppm  StudentRole.cppm.autosave  TaskInfo.cppm  TeacherRole.cppm  TeachingTask.cppm
